2010-02-26  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Changer_robot.pl: log test output too
	* installcheck/Installcheck.pm: typo
	* perl/Amanda/Changer.pm: note about member variables
	* perl/Amanda/Changer/robot.pm: make debug callable during constructor

2010-02-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/find.c: Compute dump_status and message.
	* server-src/find.c (print_find_result): Output dump_status and message.
	* server-src/find.c (search_logfile): Check if label is in tapelist.
	* server-src/find.h: Add dump_status and message to find_result_t.
	* perl/Amanda/Logfile.swg: Swig it.
	* perl/Amanda/DB/Catalog.pm: Set dump_status and message.
	* installcheck/Amanda_DB_Catalog.pl: Test it.
	* installcheck/Amanda_Logfile.pl: Test it.
	* server-src/amcheckdump.pl: Use new search_logfile behaviour.
	* server-src/amindexd.c: Use dump_status.
	* server-src/amoverview.pl: Use new 'amadmin find' output.
	* server-src/disk_history.c: Remove code no longer needed.
	* server-src/tapefile.c (lookup_tapelabel): const the label argument.
	* server-src/tapefile.h (lookup_tapelabel): const the label argument.

2010-02-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c (set_config_overrides): new config override api.
	* common-src/conffile.h (set_config_overrides): New prototype.
	* perl/Amanda/Config.swg (set_config_overrides): Swigged.
	* changer-src/chg-glue.pl, common-src/amgetconf.pl,
	* common-src/file.c, device-src/amdevcheck.pl,
	* device-src/amtapetype.pl, installcheck/Amanda_Config.pl,
	* installcheck/Amanda_Tapelist.pl, installcheck/Installcheck/Config.pm,
	* installcheck/amgetconf.pl, recover-src/amrecover.c,
	* server-src/amadmin.c, server-src/amcheck-device.pl,
	* server-src/amcheck.c, server-src/amcheckdump.pl,
	* server-src/amcleanup.pl, server-src/amfetchdump.pl,
	* server-src/amflush.c, server-src/amlabel.pl,
	* server-src/amlogroll.c, server-src/amreport_new.pl,